# new_abaqus

./: CMakeLists.txt  Makefile  README.md  main.cpp
example_runfiles/: ex1.inp  ex2.inp  ex3.inp  example1_2D.inp  example2_3D_bar.inp  example2_tuning_fork.inp  example3_tuning_fork.inp
src/: CMakeLists.txt  Gauss.cpp  Gauss.h  Makefile  cmake_install.cmake  contact.cpp  contact.h  dof.cpp  dof.h  element.cpp  element.h  mesh.cpp  mesh.h  mid.cpp  mid.h  misc_string_functions.cpp  misc_string_functions.h  model.cpp  model.h  new_abaqus.cpp  new_abaqus.h  node.cpp  node.h  pid.cpp  pid.h  set.cpp  set.h
src/elements/: C3D10.cpp  C3D10.h  C3D20.cpp  C3D20.h  C3D8.cpp  C3D8.h  CMakeLists.txt  CPS3.cpp  CPS3.h  CPS4.cpp  CPS4.h  S2.cpp  S2.h  S3.cpp  S3.h  element.cpp  element.h
src/include/: C3D10.h  C3D20.h  C3D8.h  CPS3.h  CPS4.h  Gauss.h  S3.h  contact.h  dof.h  element.h  mesh.h  mid.h  node.h  output.h  set.h
src/src/: C3D10.cpp  C3D20.cpp  C3D8.cpp  CMakeLists.txt  CPS3.cpp  CPS4.cpp  Gauss.cpp  S3.cpp  contact.cpp  dof.cpp  element.cpp  mesh.cpp  mid.cpp  misc_string_functions.cpp  new_abaqus.cpp  node.cpp  pid.cpp  set.cpp  staring_point.cpp
tests/: CMakeLists.txt  compile_commands.json  run_clang_tidy.py  tests.cpp  unit_tests.cpp
tests/resources/: CPS4.inp  difficult_to_read_inputfile.inp  simple_inputfile.inp
